--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -232,3 +232,4 @@ en:
       reset_password_instructions:
         instruction: "Someone has requested a link to change your password, and you can do this
           through the link below. <strong>Please note that this link expires in %{expire} hours.</strong>"
+  error_user_is_not_a_team_member: "Sorry, you can only assign to members of this team"
