--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -157,20 +157,17 @@ fr:
   role_none: membre
   oembed_credit: Ajouté par %{user} (%{role}) %{date}
   oembed_notes_count:
-    zero: Aucune note
     one: Une note
-    other: "%{count} notes"
+    other: '%{count} notes'
   oembed_completed_tasks_count:
-    zero: Aucune tâche complétée
-    one: Une tâche complétée
-    other: "%{count}tâches complétées"
+    one: "Une tâche complétée"
+    other: "%{count} tâches complétées"
   oembed_verification_tasks: Tâches de vérification
   oembed_expand_all: Développer tout
   oembed_collapse_all: Réduire tout
   oembed_resolved_tasks_count:
-    zero: Aucune tâche résolue
-    one: Une tâche résolue
-    other: "%{count}tâches résolues"
+    one: "Une tâche de vérification résolue"
+    other: "%{count} tâches de vérification résolues"
   oembed_notes: Notes
   pender_conflict: Ce lien est déjà en cours de traitement, veuillez ressayer dans quelques secondes.
   duplicate_source: La source existe déjà
