--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -238,7 +238,11 @@ en:
   slack_assign_task: "*%{user}* assigned task %{url} in *%{project}* to *%{assignee}*"
   slack_unassign_task: "*%{user}* unassigned task %{url} in *%{project}* from *%{assignee}*"
   mail_see_it: "You can see it at: "
-  mail_subject_assign_report: "A report was assigned to you"
-  mail_subject_unassign_report: "You were unassigned from a report"
-  mail_assign_report: "%{author} assigned report \"%{project_media}\" to you."
-  mail_unassign_report: "%{author} unassigned you from report \"%{project_media}\"."
+  mail_subject_assign_status: "A report was assigned to you"
+  mail_subject_unassign_status: "You were unassigned from a report"
+  mail_assign_status: "%{author} assigned report \"%{project_media}\" to you."
+  mail_unassign_status: "%{author} unassigned you from report \"%{project_media}\"."
+  mail_subject_assign_task: "A task was assigned to you"
+  mail_subject_unassign_task: "You were unassigned from a task"
+  mail_assign_task: "%{author} assigned task \"%{task}\" to you."
+  mail_unassign_task: "%{author} unassigned you from task \"%{task}\"."
