--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -235,11 +235,11 @@ en:
   slack_assign_task: "*%{user}* assigned task %{url} in *%{project}* to *%{assignee}*"
   slack_unassign_task: "*%{user}* unassigned task %{url} in *%{project}* from *%{assignee}*"
   mail_see_it: "You can see it at: "
-  mail_subject_assign_status: "A report was assigned to you"
-  mail_subject_unassign_status: "You were unassigned from a report"
-  mail_assign_status: "%{author} assigned report \"%{project_media}\" to you."
-  mail_unassign_status: "%{author} unassigned you from report \"%{project_media}\"."
-  mail_subject_assign_task: "A task was assigned to you"
-  mail_subject_unassign_task: "You were unassigned from a task"
-  mail_assign_task: "%{author} assigned task \"%{task}\" to you."
-  mail_unassign_task: "%{author} unassigned you from task \"%{task}\"."
+  mail_subject_assign_status: "[%{team} - %{project}] A media item was assigned to you"
+  mail_subject_unassign_status: "[%{team} - %{project}] A media item was unassigned from you"
+  mail_subject_assign_task: "[%{team} - %{project}] A task was assigned to you"
+  mail_subject_unassign_task: "[%{team} - %{project}] A task was unassigned from you"
+  mail_assign_status: "%{author} assigned a media item to you. It's titled:"
+  mail_unassign_status: "%{author} unassigned a media item from you. It's titled:"
+  mail_assign_task: "%{author} assigned a task \"%{task}\" to you. It's on the media item titled:"
+  mail_unassign_task: "%{author} unassigned a task \"%{task}\" from you. It's on the media item titled:"
