Ticket #6575: Fix Slack message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -106,7 +106,8 @@ en:
   slack_create_project_media: "*%{user}* added a new %{type} to *%{project}*: %{url}"
   slack_create_project_media_no_user: 'A new %{type} has been added to *%{project}*:
     %{url}'
-  slack_create_task: "*%{user}* created task %{url} in *%{project}*%{create_note}"
+  slack_create_task_message: "*%{user}* created task %{url} in *%{project}*%{assignment}%{create_note}"
+  slack_create_task_assignment: " assigned to %{assignee}"
   slack_create_task_note: " with note: %{note}"
   slack_answer_task: |-
     *%{user}* answered task %{url} in *%{project}*: %{response}
