--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -207,3 +207,6 @@ pt:
   mail_unassign_status: "%{author} removeu a atribuição da mídia intitulada "
   mail_assign_task: "%{author} atribuiu para você a tarefa \"%{task}\" que fica na mídia intitulada "
   mail_unassign_task: "%{author} removeu a atribuição da tarefa \"%{task}\" que fica na mídia intitulada "
+  archive_keep_backup: "Video Vault"
+  archive_pender_archive: "capturas de tela com Keep"
+  archive_archive_is: "Archive.is"
