--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,6 +1,6 @@
 es:
   link: Enlace
-  claim: Reclamo
+  claim: Afirmación
   uploadedimage: Imagen
   uploadefile: Archivo
   blank: "(en blanco)"
@@ -44,7 +44,7 @@ es:
   activerecord:
     models:
       link: Enlace
-      claim: Reclamo
+      claim: Afirmación
       uploaded_image: Imagen
       uploaded_file: Archivo
     attributes:
@@ -89,12 +89,15 @@ es:
   rejected: 'no aprobado '
   mail_request_to_join_processed: Tu solicitud para unirte a  %{team} en %{app_name} fue %{status}
   mail_new_account: Nueva cuenta para ti en  %{app_name}
+  slack_update_status: "*%{user}*cambió el estado de verificación de  %{url} en *%{project}* de _%{previous_status}_ a *%{current_status}*"
   slack_save_embed: "*%{user}* cambió el título del reporte en el *%{project}* de _%{from}_ a %{to}"
   slack_save_comment: "*%{user}*añadió una nota a %{url} en el *%{project}*: %{comment}"
   slack_create_project: "*%{user}* creó un proyecto: %{url}"
   slack_create_team_user: "*%{user}* se ha unido al equipo %{url}"
   slack_create_project_media: "*%{user}* añadió un nuevo %{type} a *%{project}*: %{url}"
   slack_create_project_media_no_user: 'Un nuevo %{type} ha sido añadido a *%{project}*: %{url}'
+  slack_create_task_message: "*%{user}* tarea creada %{url} en *%{project}*%{assignment}%{create_note}"
+  slack_create_task_assignment: " asignado a %{assignee}"
   slack_create_task_note: " con nota: %{note}"
   slack_answer_task: |-
     *%{user}* tarea resuelta %{url} en *%{project}*: %{response}
@@ -190,6 +193,20 @@ es:
     mailer:
       reset_password_instructions:
         instruction: "Alguien ha solicitado un enlace para cambiar tu contraseña, y tu puedes hacerlo a través del siguiente enlace.  <strong>Ten en cuenta que este enlace vence en  %{expire} horas.</strong>"
+  error_user_is_not_a_team_member: "Lo sentimos, solo puedes asignar a los miembros de este equipo"
+  slack_assign_report: "*%{user}* asignó %{url} a *%{assignee}* en *%{project}*"
+  slack_unassign_report: "*%{user}* desasignó %{url} de *%{assignee}* en *%{project}*"
+  slack_assign_task: "*%{user}* tarea asignada %{url} en *%{project}* a *%{assignee}*"
+  slack_unassign_task: "*%{user}* desasignó la tarea %{url} en *%{project}* de *%{assignee}*"
+  mail_see_it: "Puedes verlo en:"
+  mail_subject_assign_status: "[%{team} - %{project}] Se te ha asignado un elemento multimedia"
+  mail_subject_unassign_status: "[%{team} - %{project}] Se te ha desasignado un elemento multimedia"
+  mail_subject_assign_task: "[%{team} - %{project}] Se te ha asignado una tarea"
+  mail_subject_unassign_task: "[%{team} - %{project}] Se te ha desasignado una tarea"
+  mail_assign_status: "%{author} te asignó el medio: "
+  mail_unassign_status: "%{author} te desasignó el medio: "
+  mail_assign_task: "%{author} te asignó la tarea  \"%{task}\" del medio: "
+  mail_unassign_task: "%{author} te desasignó la tarea \"%{task}\" del medio: "
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "capturas de pantalla con Keep"
   archive_archive_is: "Archive.is"
