Ticket #6644: Adding Archive.org archiver

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,3 +248,4 @@ en:
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "Keep screenshots"
   archive_archive_is: "Archive.is"
+  archive_archive_org: "Archive.org"
