--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,3 +248,17 @@ en:
   archive_pender_archive: "Keep screenshots"
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
+  project_export_email_title: "Your project report is ready to be downloaded"
+  project_export_download_mail: "Hello!
+
+    
+    You've requested a download of %{project} report - here's a link to download it: %{link}
+
+    
+    Please note that this link will expire in %{days} days.
+
+    
+    Cheers,
+
+    
+    %{app} team"
