--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -211,3 +211,5 @@ es:
   archive_pender_archive: "capturas de pantalla con Keep"
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
+  project_export_email_title: "Su informe de proyecto está listo para descargar"
+  project_export_download_mail: "¡Hola!\n\nSolicitó un informe para el proyecto %{project} - aquí hay un enlace para descargarlo: %{link}\n\nEl informe se descargará como un archivo comprimido y encriptado. Para descomprimirlo, usa la contraseña: %{password}\n\nTenga en cuenta que este enlace expirará en %{days} días.\n\nSaludos,\n\nEquipo %{app}"
