--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,14 +248,31 @@ en:
   archive_pender_archive: "Keep screenshots"
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
-  project_export_email_title: "Your project report is ready to be downloaded"
-  project_export_download_mail: "Hello!
+  project_export_email_title_csv: "Your project report is ready to be downloaded"
+  project_export_download_mail_csv: "Hello!
    
 
     You've requested a report for %{project} - here's a link to download it: %{link}
   
     
     The report will download as a compressed, encrypted file. To decompress it, please use the password %{password}.
+
+    
+    Please note that this link will expire in %{days} days.
+
+    
+    Cheers,
+
+    
+    %{app} team"
+  project_export_email_title_images: "Your project images are ready to be downloaded"
+  project_export_download_mail_images: "Hello!
+   
+
+    You've requested a download of %{project} images - here's a link to download it: %{link}
+  
+    
+    The images will download as a compressed, encrypted file. To decompress it, please use the password %{password}.
 
     
     Please note that this link will expire in %{days} days.
