--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -211,5 +211,7 @@ es:
   archive_pender_archive: "capturas de pantalla con Keep"
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
-  project_export_email_title: "Su informe de proyecto está listo para descargar"
-  project_export_download_mail: "¡Hola!\n\nSolicitó un informe para el proyecto %{project} - aquí hay un enlace para descargarlo: %{link}\n\nEl informe se descargará como un archivo comprimido y encriptado. Para descomprimirlo, usa la contraseña: %{password}\n\nTenga en cuenta que este enlace expirará en %{days} días.\n\nSaludos,\n\nEquipo %{app}"
+  project_export_email_title_csv: "Su informe de proyecto está listo para descargar"
+  project_export_download_mail_csv: "¡Hola!\n\nSolicitó un informe para el proyecto %{project} - aquí hay un enlace para descargarlo: %{link}\n\nEl informe se descargará como un archivo comprimido y encriptado. Para descomprimirlo, usa la contraseña: %{password}\n\nTenga en cuenta que este enlace expirará en %{days} días.\n\nSaludos,\n\nEquipo %{app}"
+  project_export_email_title_images: "Las imágenes de tu proyecto están listas para descargar"
+  project_export_download_mail_images: "¡Hola!\n\n\nSolicitó una descarga de las imágenes del proyecto %{project} - aquí hay un enlace para descargarlas: %{link}\n\nLas imágenes se descargarán como un archivo comprimido y encriptado. Para descomprimirlo, usa la contraseña: %{password}\n\nTenga en cuenta que este enlace expirará en %{days} días.\n\nSaludos,\n\nEquipo %{app}"
