--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -211,5 +211,7 @@ fr:
   archive_pender_archive: "copies d'écran de Keep"
   archive_archive_is: "Archive.is"
   archive_archive_org: "Archive.org"
-  project_export_email_title: "Votre rapport de projet est prêt à télécharger"
-  project_export_download_mail: "Bonjour !\n\nVous avez demandé un rapport du projet %{project} - voici le lien pour le télécharger : %{link}\n\nLe rapport sera téléchargé sous forme de fichier compressé et chiffré. Pour le décompresser, utilisez le mot de passe %{password}.\n\nVeuillez noter que le lien ci-dessus expirera dans %{days} jours.\n\nAmicalement,\n\nL'équipe %{app}"
+  project_export_email_title_csv: "Votre rapport de projet est prêt à télécharger"
+  project_export_download_mail_csv: "Bonjour !\n\nVous avez demandé un rapport du projet %{project} - voici le lien pour le télécharger : %{link}\n\nLe rapport sera téléchargé sous forme de fichier compressé et chiffré. Pour le décompresser, utilisez le mot de passe %{password}.\n\nVeuillez noter que le lien ci-dessus expirera dans %{days} jours.\n\nAmicalement,\n\nL'équipe %{app}"
+  project_export_email_title_images: "Les images de votre projet sont prêtes à télécharger"
+  project_export_download_mail_images: "Bonjour !\n\nVous avez demandé à télécharger les images du projet %{project} - voici le lien : %{link}\n\nLes images seront téléchargées sous forme de fichier compressé et chiffré. Pour le décompresser, utilisez le mot de passe %{password}.\n\nVeuillez noter que le lien ci-dessus expirera dans %{days} jours.\n\nAmicalement,\n\nL'équipe %{app}"
